--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^4.3.1",
     "apiai": "^4.0.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.1.3"
   }
